# systemc_simple_tutorial

./: .gitignore
alu_4bit/: CMakeLists.txt  Makefile
alu_8bit_exam/: CMakeLists.txt  Makefile  alu_8bit_exam.cpp  alu_8bit_exam.h  alu_8bit_exam_tb.cpp
fifo_async_design/: Makefile  fifo_async.h  fifo_async_tb.cpp
fifo_design/: fifo.h  fifo_tb.cpp
logic_gate/: Makefile  logic_and.h  logic_and_tb.cpp  logic_or.h
mux_4to1/: Makefile
mux_4to1_exam/: Makefile  mux_4to1_exam.h  mux_4to1_exam_tb.cpp  mux_8to1_exam.h  mux_8to1_exam_tb.cpp
register_ram/: Makefile
time_gate/: Makefile  time_and.h  time_and_tb.cpp
